# MCP

./: .env.example  .gitignore  README.md  pyproject.toml  usermanual.md
cloud-run-services/confluence_service/: main.py
cloud-run-services/github_service/: main.py
cloud-run-services/shared/: app_factory.py
cloud_run_services/agent_service/: main.py
cloud_run_services/ai_gateway/: main.py
cloud_run_services/jira_service/: main.py
cloud_run_services/rag_service/: main.py
cloud_run_services/reporting_service/: main.py
data-layer/: __init__.py
data-layer/bigquery/: client.py
data-layer/cloud_sql/: client.py
data_layer/cloud_storage/: client.py
deployment/: Dockerfile.service  cloudbuild.yaml  docker-compose.yml  init-db.sql  mcp-config.json
deployment/terraform/: main.tf
eai_platform/: __init__.py  config.py  http_client.py  logging.py  mcp_base.py
frontend-ui/: index.html  nginx.conf  package-lock.json  package.json
frontend-ui/src/: AgentPanel.css  AgentPanel.tsx  App.css  App.tsx  api.ts  index.css
mcp_server/: __init__.py
mcp_server/aws/: server.py
mcp_server/browser/: server.py
mcp_server/confluence/: server.py
mcp_server/github/: server.py
mcp_server/jira/: server.py
mcp_server/kubernetes/: server.py
mcp_server/mongodb/: server.py
mcp_server/postgresql/: server.py
mcp_server/slack/: server.py
scripts/: install-mcp.ps1  run-local.ps1
tests/: test_platform.py
vertex-ai/: __init__.py
vertex-ai/vector_search/: client.py
vertex_ai/embeddings/: client.py
vertex_ai/gemini/: client.py
vertex_ai/model_registry/: registry.py
