[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-ai-platform"
version = "1.0.0"
description = "GCP-native enterprise AI platform on Cloud Run with Vertex AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "atlassian-python-api>=3.41.0",
    "PyGithub>=2.5.0",
    "google-cloud-aiplatform>=1.74.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-storage>=2.19.0",
    "cloud-sql-python-connector[pg8000]>=1.14.0",
    "chromadb>=0.5.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.2",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]
mcp = [
    "pymongo>=4.10.0",
    "kubernetes>=31.0.0",
    "boto3>=1.35.0",
    "slack-sdk>=3.33.0",
    "playwright>=1.49.0",
]

[project.scripts]
mcp-github = "mcp_server.github.server:main"
mcp-jira = "mcp_server.jira.server:main"
mcp-confluence = "mcp_server.confluence.server:main"
mcp-postgresql = "mcp_server.postgresql.server:main"
mcp-mongodb = "mcp_server.mongodb.server:main"
mcp-kubernetes = "mcp_server.kubernetes.server:main"
mcp-aws = "mcp_server.aws.server:main"
mcp-slack = "mcp_server.slack.server:main"
mcp-browser = "mcp_server.browser.server:main"

[tool.hatch.build.targets.wheel]
packages = ["eai_platform", "vertex_ai", "data_layer", "cloud_run_services", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
